<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#33000000"
    android:layout_height="match_parent">
    
    <ImageView
        android:id="@+id/ivPlayPause"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        android:src="@drawable/ic_pause_48"
        android:contentDescription="@string/content_description_pause_button"
        />

    <ImageView
        android:id="@+id/ivFastRewind"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_fast_rewind_48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivPlayPause"
        app:layout_constraintBottom_toBottomOf="@id/ivPlayPause"
        app:layout_constraintTop_toTopOf="@id/ivPlayPause"
        android:contentDescription="@string/content_description_rewind_button"
        />
    <ImageView
        android:id="@+id/ivFastForward"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_fast_forward_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivPlayPause"
        app:layout_constraintBottom_toBottomOf="@id/ivPlayPause"
        app:layout_constraintTop_toTopOf="@id/ivPlayPause"
        android:contentDescription="@string/content_description_forward_button"
        />
    
    <!--time bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        
        <TextView
            android:id="@+id/tvVideoPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/label_time_stamp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/inter"/>

        <androidx.media3.ui.DefaultTimeBar
            android:id="@+id/playerTimeBar"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:played_color="@color/airForceBlue"
            app:unplayed_color="@color/bistre"
            app:scrubber_color="@color/airForceBlue"
            />

        <TextView
            android:id="@+id/tvVideoDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:text="@string/label_time_stamp"
            android:textStyle="bold"
            android:fontFamily="@font/inter"/>

        <ImageView
            android:id="@+id/ivSpeedControl"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_speed_control_48"
            android:contentDescription="@string/content_description_speed_control_button"/>
        <ImageView
            android:id="@+id/ivFullScreen"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_fullscreen_48"
            android:contentDescription="@string/content_description_fullscreen_button"/>


    </LinearLayout>

    
</androidx.constraintlayout.widget.ConstraintLayout>