<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_grocery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GroceryFragment"
    android:background="@color/timberWolf">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="30dp">

        <!-- Horizontal LinearLayout for EditText and ImageView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_delete_24"
                android:contentDescription="@string/content_description_delete_button"/>

            <EditText
                android:id="@+id/etGrocery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                android:inputType="text"
                android:hint="@string/hint_grocery"
                android:importantForAutofill="no"/>

            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add_24"
                android:contentDescription="@string/content_description_add_button"/>

        </LinearLayout>

        <!-- ListView for displaying groceries -->
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</FrameLayout>