<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/cambridgeBlue"
    android:paddingTop="10dp"
    android:paddingBottom="50dp"
    tools:context=".activities.InstructionFragment">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_instruction"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/timberWolf"
        app:cardCornerRadius="11dp">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/instructionsPager"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"
        android:textSize="15sp"
        android:text="@string/label_instruction_swipe"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/speakButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/label_btn_tts"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/style_rounded_et"
        android:backgroundTint="@color/caribbeanCurrent"/>
</LinearLayout>
