<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="100dp"
    android:background="@color/cambridgeBlue"
    tools:context=".activities.InformationFragment">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nutrient"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/timberWolf"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="11dp">

        <TextView
            android:id="@+id/tvNutrients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingHorizontal="16dp"
            android:paddingTop="24dp"
            android:lineSpacingExtra="5dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ingredient"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/timberWolf"
        app:cardCornerRadius="11dp">

        <TextView
            android:id="@+id/tvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingHorizontal="16dp"
            android:paddingTop="24dp"
            android:lineSpacingExtra="5dp"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>
